2.4.5 (30.10.20)

- Pin several messages in any chat, including one-on-one chats.
- Jump between pinned messages or open them all on a separate page via the top bar.
- Send several music tracks as a playlist. 
- Send several files as an album in one chat bubble.
- Send a :slot_machine: emoji to any chat to see if you hit the jackpot.

2.4.4 (23.10.20)

- Fix application quit on call end with main window hidden in tray.
- Update OpenAL library on Windows.
- Several crash fixes.

2.4.3 (07.10.20)

- Fix sending voice messages in scheduled messages section.
- Fix deleting profile / group / channel photos.
- Several crash fixes.

2.4.2 (02.10.20)

- Allow block, report and delete all message from user from "user joined" service message context menu.
- Fix admin badge display in groups.
- Fix loading and opening of comments in channels.

2.4.1 (01.10.20)

- Move by PageUp and PageDown in channel comments.
- Several layout bugfixes.
- Several crashfixes.

2.4 (30.09.20)

- Turn on "Remain Anonymous" in an admin's Permissions to let them post on behalf of the group and become invisible in the list of members.
- Comment on posts in channels that have a discussion group.
- Get notified about replies to your comments via the new Replies chat (if you are not a member of the discussion group).

2.3.2 (23.08.20)

- Revert custom window shadow on Linux.

2.3.1 (21.08.20)

- Fix Calls Settings for Video Calls.

2.3 (14.08.20)

- Video Calls (alpha version).

2.2 (26.07.20)

- Quickly switch between different Telegram accounts if you use multiple phone numbers.
- Share and store unlimited files of any type, now up to 2'000 MB each.
- Edit your scheduled messages.
- Use Auto-Night Mode to make Telegram night mode match the system Dark Mode settings.
- Also added an option to switch to system window frame in Windows and Linux.

2.1.22 beta (24.07.20)

- Fix crash in web page preview display.

2.1.21 beta (24.07.20)

- Edit your scheduled messages.